@@ -1,2 +1,4 @@
 Shortcuts such as \[[!google foo]] do not work when previewing pages.
 --[[JasonBlevins]]
+
+> Broken during the setup dumping changes, now fixed. --[[Joey]] [[done]]
