@@ -36,6 +36,7 @@ ikiwiki (2.68) UNRELEASED; urgency=low
   * Add support for checking pushes from untrusted git committers. This can be
     used to set up anonymous git pushes, and other similar things.
   * git: Allow [[sha1_commit]] to be used in the diffurl, to support cgit.
+  * shortcut: Fix display of shortcuts while previewing.
 
  -- Joey Hess <joeyh@debian.org>  Fri, 17 Oct 2008 20:11:02 -0400
 
